CI: always update Rust
Not sure what version of Rust the CI script defaults to, but it's old. This change adds a run of `rustup update` to ensure it's always the latest stable release.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Ensure latest Rust
+      run: sudo rustup update
     - name: Install SDL2 dependencies
       run: |
         sudo apt-get update
