--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install latest stable Rust version
-      uses: actions-rs/rust-toolchain@v1
+      uses: actions-rs/toolchain@v1
       with:
         profile: minimal
         toolchain: stable
